20210505 -- minor updates for search and publish
20210505 -- minor updates for search and publish

--- a/Плагины/Поиск.md
+++ b/Плагины/Поиск.md
@@ -69,11 +69,14 @@ Obsidian запомнит ваши последние использованны
 
 Существует несколько специальных операторов. Некоторые операторы допускают вложенность запросов с применением круглых скобок. Например: `file:("to be" OR -"2B")`.
 
-- `file:` произведет поиск по имени файла. Например: `file:".jpg"`. Если вы применяете методику Zettelkasten с использованием UID в имени файлов, то это может позволить сузить временной интервал поиска, например `file:"202007"`отобразит файлы за июль 2020.
-- `path:` произведет поиск по абсолютному пути до файла от корня хранилища. Например: `file:"Daily Notes/2020-07"`.
-- `content:` произведет поиск по содержимому файла. Например: `content:"happy cat"`.
-- `match-case:` и `ignore-case:` задает логику чувствительности к регистру для поискового запроса.
+- `file:(...)` произведет поиск по имени файла. Например: `file:".jpg"`. Если вы применяете методику Zettelkasten с использованием UID в имени файлов, то это может позволить сузить временной интервал поиска, например `file:202007`отобразит файлы за июль 2020.
+- `path:(...)` произведет поиск по абсолютному пути до файла от корня хранилища. Например: `file:"Daily Notes/2020-07"`.
+- `content:(...)` произведет поиск по содержимому файла. Например: `content:"happy cat"`.
+- `match-case:(...)` и `ignore-case:(...)` задает логику чувствительности к регистру для поискового запроса.
 - `tag:` произведет поиск по указанному тегу, например `tag:#work`. Это работает быстрее и точнее чем поиск тега `#work` без соответствующего оператора, поскольку при этом используется кэшированная информация и игнорируется текст в блоках кода и разделах с не Markdown-текстом.
 - `line:(...)` произведет построчный поиск, а не базовый по файлам. Например, запрос `foo bar` может выдать файл, в котором `foo` находится в первом абзаце, а `bar` в последнем. Поиск с `line:(foo bar)` выдаст только те файлы, где `foo` и `bar` находятся в одной строке.
-- `block:(...)` произведет поиск по блокам, где каждый блок определяется как блок Markdown и обычно отделен пустыми строками. Поиск в таком режиме может быть медленнее, так как требуется больше вычислений для синтаксического анализ каждого файла.
+- `block:(...)` произведет поиск по блокам, где каждый блок определяется как блок Markdown и обычно отделен пустыми строками или элементами списка. Поиск в таком режиме может быть медленнее, так как требуется больше вычислений для синтаксического анализ каждого файла.
 - `section:(...)` произведет поиск по секциям, где каждая секция, это текст между двумя заголовками, включая первый заголовок.
+- `task:(...)` произведет поиск по каждой [[Форматирование заметок#Список задач|задаче]], по блокам. Используйте `task:""` для поиска всех задач.
+- `task-todo:(...)` произведет поиск только по каждой *незавершенной* [[Форматирование заметок#Список задач|задаче]], по блокам. Используйте `task-todo:""` для поиска всех незавершенных задач.
+- `task-done:(...)` произведет поиск только по каждой *завершенной* [[Форматирование заметок#Список задач|списками задач]], по блокам. Используйте `task-done:""` для поиска всех завершенных задач.
