20210505 -- re-taked few images
20210505 -- re-taked few images

--- a/Плагины/Восстановление файлов.md
+++ b/Плагины/Восстановление файлов.md
@@ -21,7 +21,7 @@
 3. Нажмите на кнопку «Обзор» в подразделе «Снимки»;
 4. В открывшемся окне, в строке поиска слева, наберите имя файла, который вы хотите восстановить. Если имя файла не отображается, это означает, что для этого файла не было сделано снимков;
 5. После выбора нужного файла с левой стороны будет отображаться список сделанных снимков по дате. Выберите тот, который хотите восстановить;
-6. Содержимое снимка будет отображаться с правой стороны окна. Вы можете выбрать для копирования какую-либо его часть или нажать на кнопку «Скопировать в буфер обмена» (Copy to clipboard), чтобы скопировать его содержимое целиком.
+6. Содержимое снимка будет отображаться с правой стороны окна. Вы можете выбрать для копирования какую-либо его часть или нажать на кнопку «Скопировать в буфер обмена», чтобы скопировать его содержимое целиком.
 
 ## Настройки
 
