--- a/Плагины/Шаблоны.md
+++ b/Плагины/Шаблоны.md
@@ -34,4 +34,4 @@ _Подсказка: если вы хотите иметь два формата
 
 ### Использование пользовательских форматов дат в других местах
 
-В настоящее время такие форматы даты и времени, как `{{date:YYYY-MM-DD}}` и `{{time:HH:mm}}` также работают в файле шаблонов плагинов [[Ежедневные заметки]] и [[Префикс Zettelkasten]]. Однако, `{{date}}` и `{{time}}` пока не работают.
+В настоящее время такие форматы даты и времени, как `{{date:YYYY-MM-DD}}` и `{{time:HH:mm}}` также работают в файле шаблонов плагинов [[Ежедневные заметки]] и [[Zettelkasten]]. Однако, `{{date}}` и `{{time}}` пока не работают.
