--- a/Руководства/Добавление псевдонимов к заметке.md
+++ b/Руководства/Добавление псевдонимов к заметке.md
@@ -26,7 +26,7 @@ aliases: [ИИ, Искусственный Интеллект]
 
 ![[Insert alises.png]]
 
-Внутренняя ссылка будет вставлена следующим образом: `[[Добавление псевдонима к заметке|псевдоним]]`.
+Внутренняя ссылка будет вставлена следующим образом: `[[Добавление псевдонимов к заметке|псевдоним]]`.
 
 Примечание: ссылка на псевдоним заметки **НЕ** вставляется как `[[псевдоним]]` для обеспечения совместимости, чтобы другие приложения также могли распознать ее.
 
