--- a/Руководства/Импорт данных.md
+++ b/Руководства/Импорт данных.md
@@ -48,4 +48,4 @@
 
 Для того чтобы исправить это, вы можете использовать плагин [[Импорт Markdown-файлов]] для конвертации Zettelkasten ссылок в формат `[[202001010000 My Note]]` или в `[[202001010000 My Note|My Note]]`.
 
-Вас также может заинтересовать плагин [[Префикс Zettelkasten]].
+Вас также может заинтересовать плагин [[Zettelkasten]].
