--- a/Руководства/Работа с обратными ссылками.md
+++ b/Руководства/Работа с обратными ссылками.md
@@ -1,6 +1,6 @@
 Обратные ссылки — одна из самых мощных функций Obsidian. Однако иногда их использование может сбить с толку. Далее размещены некоторые советы, которые могут помочь вам.
 
-Панель обратных состоит из двух разделов — «Упоминания со ссылкой» и «Упоминания без ссылки»:
+Панель обратных ссылок состоит из двух разделов — «Упоминания со ссылкой» и «Упоминания без ссылки»:
 
 ![[Backlinks.png]]
 
