--- a/Obsidian/Сведения об авторах.md
+++ b/Obsidian/Сведения об авторах.md
@@ -30,9 +30,11 @@
 - canzi-teacher, 蚕子 (Chinese Simplified)
 - Daniel Mathiot (French)
 - Henrik Falk (Danish)
+- JxhnnyUt8h (Russian) 
 - k-andzhanovskii, Константин Анджановский (Russian)
 - lisachev, Сергей Лисачев (Russian)
 - mafsi, (Patrick Danilevici) (Română)
+- taksas, 中山 拓海 (Japanese)
 - VKondakoff, Валерий Кондаков (Russian)
 - yo-goto, ぱだわん (Japanese)
 
