Update Мобильное приложение бета-тестирование.md
typo fix

--- a/Obsidian/Мобильное приложение бета-тестирование.md
+++ b/Obsidian/Мобильное приложение бета-тестирование.md
@@ -1,6 +1,6 @@
 ## Публичный выпуск
 
-Мобильное приоложение теперь общедоступно, а ссылку на магазин приложений можно найти по адресу: https://obsidian.md/mobile. 
+Мобильное приложение теперь общедоступно, а ссылку на магазин приложений можно найти по адресу: https://obsidian.md/mobile. 
 
 ## Документация
 
@@ -8,7 +8,7 @@
 
 ## Ранние сборки
 
-Если вы держателей лицензии [Obsidian Catalyst](https://obsidian.md/pricing), возможно вы захотите получить доступ к [[Ранние сборки|раниим сборкам]] для мобильных устройств.
+Если вы держателей лицензии [Obsidian Catalyst](https://obsidian.md/pricing), возможно вы захотите получить доступ к [[Ранние сборки|ранним сборкам]] для мобильных устройств.
 
 Для поддержания обратной связи и публикации информации о релизах приложения централизованно, и поскольку у нас нет возможности собирать отзывы и обсуждать внесение исправления по электронной почте, мы просим держателей лицензии Catalyst, которые хотели бы участвовать в бета-тестирование мобильного приложения, выполнить следующие шаги:
 
