Core plugins renamed + 3 notes
Core plugins renamed + 3 notes translated

--- a/Плагины/Диктофон.md
+++ b/Плагины/Диктофон.md
@@ -12,4 +12,4 @@ Record and save audio recordings directly into an Obsidian note. With the Audio 
 Obsidian saves the recorded audio file to your vault and [[Embedding files|embeds]] it at the end of the active note.
 
 > [!note]
-> Audio recordings remain in your vault even after you remove them from your note. If you want to remove the recording from your computer, you can use the [[File explorer]] to delete the file.
+> Audio recordings remain in your vault even after you remove them from your note. If you want to remove the recording from your computer, you can use the [[Файловый менеджер]] to delete the file.
