--- a/Плагины/Избранное.md
+++ b/Плагины/Избранное.md
@@ -1,4 +1,4 @@
-Find files easier by starring them. You can find your starred files by clicking the **Starred** (star icon) tab in the left sidebar, or by running **Show starred notes** from the [[Command palette]].
+Find files easier by starring them. You can find your starred files by clicking the **Starred** (star icon) tab in the left sidebar, or by running **Show starred notes** from the [[Палитра команд]].
 
 Click the name of a file in the **Starred** pane to open it.
 
@@ -8,7 +8,7 @@ To star a note:
 
 **File explorer:**
 
-- Right-click a file in [[File explorer]] and click **Star**.
+- Right-click a file in [[Файловый менеджер]] and click **Star**.
 
 **Options menu:**
 
@@ -16,7 +16,7 @@ To star a note:
 
 **Command palette:**
 
-1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Command palette]].
+1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Палитра команд]].
 1. Search for the **Star/unstar current file** command.
 1. Press `Enter` with the command selected to toggle the active note.
 
