--- a/Плагины/Пространства.md
+++ b/Плагины/Пространства.md
@@ -12,7 +12,7 @@ A workspace contains information about open files and panes, and the width and v
 
 **Command palette:**
 
-1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Command palette]].
+1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Палитра команд]].
 1. Search for the **Manage workspace layouts** command.
 1. Press `Enter` with the command selected.
 1. Enter a name for the workspace.
@@ -29,7 +29,7 @@ To update an existing workspace, save the workspace with the same name as the wo
 
 **Command palette:**
 
-1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Command palette]].
+1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Палитра команд]].
 1. Search for the **Manage workspace layouts** command.
 1. Press `Enter` with the command selected.
 1. Select the workspace to load.
@@ -43,7 +43,7 @@ To update an existing workspace, save the workspace with the same name as the wo
 
 **Command palette:**
 
-1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Command palette]].
+1. Press `Ctrl+P` (or `Cmd+P` on macOS) to open the [[Палитра команд]].
 1. Search for the **Manage workspace layouts** command.
 1. Press `Enter` with the command selected.
 1. Next to the workspace you want to delete, select **Delete layout** (cross icon).
