--- a/Плагины/Файловый менеджер.md
+++ b/Плагины/Файловый менеджер.md
@@ -1,4 +1,4 @@
-The File explorer lets you manage files and folders inside your vault. You can browse notes and other [[Accepted file formats]] in your vault and perform many common file operations:
+The File explorer lets you manage files and folders inside your vault. You can browse notes and other [[Поддерживаемые форматы файлов]] in your vault and perform many common file operations:
 
 - Create, delete, and rename files and folders.
 - Move files and folders with drag and drop.
@@ -41,7 +41,7 @@ To create a subfolder:
 1. Right-click the file you want to delete, and then click **Delete**.
 2. If prompted to confirm that you want to delete the file, click **Delete**.
 
-For more information, refer to [[Deleting files]].
+For more information, refer to [[Удаление файлов]].
 
 ## Rename a file or folder
 
