--- a/Плагины/Холст.md
+++ b/Плагины/Холст.md
@@ -15,12 +15,12 @@ To start using Canvas, you first need to create a file to hold your canvas. You 
 
 **Command palette:**
 
-1. Open the [[Command palette]].
+1. Open the [[Палитра команд]].
 1. Select **Canvas: Create new canvas** to create a canvas in the same folder as the active file.
 
 **File explorer:**
 
-- In the [[File explorer]], right-click the folder you want to create the canvas in.
+- In the [[Файловый менеджер]], right-click the folder you want to create the canvas in.
 - Select **New canvas**.
 
 > [!note]  The .canvas file extension
@@ -46,7 +46,7 @@ To convert a text card to a file:
 1. Enter the note name and then select **Save**.
 
 > [!note]
-> Text-only cards don't appear in [[Backlinks]]. To make them appear, you need to convert them to a file.
+> Text-only cards don't appear in [[Обратные ссылки]]. To make them appear, you need to convert them to a file.
 
 ### Add cards from notes
 
@@ -60,7 +60,7 @@ You can also add notes from the canvas context menu:
 1. Right-click the canvas and then select **Add note from vault**.
 1. Select the note you want to add.
 
-Or, you can add them to the canvas by dragging the file from the [[File explorer]].
+Or, you can add them to the canvas by dragging the file from the [[Файловый менеджер]].
 
 ### Add cards from media
 
@@ -74,7 +74,7 @@ You can also add media from the canvas context menu:
 1. Right-click the canvas and then select **Add media from vault**.
 1. Select the media file you want to add.
 
-Or, you can add them to the canvas by dragging the file from the [[File explorer]].
+Or, you can add them to the canvas by dragging the file from the [[Файловый менеджер]].
 
 ### Add cards from web pages
 
