--- a/Начните здесь.md
+++ b/Начните здесь.md
@@ -6,14 +6,14 @@ At the same time, I'm also just a Markdown file sitting on your hard disk. It's 
 
 If you're in a hurry, here's some quick places to dive in:
 
-- The [[Command palette]] contains most of the commands you need to work with Obsidian. Just press `Ctrl/Cmd-P` and start typing.
+- The [[Палитра команд]] contains most of the commands you need to work with Obsidian. Just press `Ctrl/Cmd-P` and start typing.
 - How to [[Create notes|create new notes]].
 - How to create [[Internal links]]
 - How to use Markdown to [[Format your notes]]
 - How to [[Embedding files|embed files]] or other notes
 - [[Use hotkeys]]
 - How to [[Working with multiple notes|open multiple files side by side]]
-- Obsidian can be extended with [[Core plugins|plugins]]. Several are available by default, and can be enabled or disabled according to your needs.
+- Obsidian can be extended with [[Встроенные плагины|plugins]]. Several are available by default, and can be enabled or disabled according to your needs.
 
 
 If you want a more thorough introduction, including a bit about our philosophy, check out [[Obsidian]].
