--- a/Плагины/Исходящие ссылки.md
+++ b/Плагины/Исходящие ссылки.md
@@ -1,4 +1,4 @@
-The Outgoing links plugin shows the links from the active note at a glance, as well as potential links to be made. It's similar to the [[Backlinks]] plugin, which instead shows you _incoming_ links to the active note.
+The Outgoing links plugin shows the links from the active note at a glance, as well as potential links to be made. It's similar to the [[Обратные ссылки]] plugin, which instead shows you _incoming_ links to the active note.
 
 The Outgoing links pane (link with right arrow icon) is available in the right sidebar and contains the following sections:
 
