--- a/Плагины/Компоновщик заметок.md
+++ b/Плагины/Компоновщик заметок.md
@@ -21,13 +21,13 @@ To merge the active note with another note in your vault:
 
 **Command palette**
 
-1. Open the [[Command palette]].
+1. Open the [[Палитра команд]].
 1. Select **Note composer: Merge current file with another file...**.
 1. Select the note you want to merge into.
 1. Click **Merge** to confirm.
 
 > [!tip]
-> By default, Note composer asks you to confirm when merging notes. If you disable the confirmation, and you merge a note by mistake, you can still recover it with the [[File recovery]] plugin.
+> By default, Note composer asks you to confirm when merging notes. If you disable the confirmation, and you merge a note by mistake, you can still recover it with the [[Восстановление файлов]] plugin.
 
 ## Extract note
 
@@ -49,7 +49,7 @@ To extract text into a new note:
 **Command palette**
 
 1. While in the **Editing view**, select the text you want to extract.
-1. Open the [[Command palette]].
+1. Open the [[Палитра команд]].
 1. Select **Note composer: Extract current selection...**.
 1. Select the note you want to extract into.
 
