--- a/Плагины/Обратные ссылки.md
+++ b/Плагины/Обратные ссылки.md
@@ -29,14 +29,14 @@ The backlinks pane have the following options:
 - **Collapse results** toggles whether to expand each note to display the mentions in it.
 - **Show more context** toggles whether to truncate or display the full paragraph that contains the mention.
 - **Change sort order** determines how to sort the mentions.
-- **Show search filter** toggles a text field that lets you filter the mentions. For more information on how to build a search query, refer to [[Search]].
+- **Show search filter** toggles a text field that lets you filter the mentions. For more information on how to build a search query, refer to [[Поиск]].
 
 ## View backlinks for a note
 
 To view the backlinks for the active note, click the **Backlinks** (link and arrow icon) tab in the right side bar.
 
 > [!note]
-> If you can't see the Backlinks tab, you can make it visible by opening the [[Command palette]] and running the **Backlinks: Show backlinks pane** command.
+> If you can't see the Backlinks tab, you can make it visible by opening the [[Палитра команд]] and running the **Backlinks: Show backlinks pane** command.
 
 ## Open a linked backlinks pane
 
@@ -44,7 +44,7 @@ The backlinks pane lists backlinks for the active note and updates when you swit
 
 To open a linked backlinks pane:
 
-1. Open the [[Command palette]].
+1. Open the [[Палитра команд]].
 1. Select **Backlinks: Open backlinks for the current note**.
 
 A separate tab opens next to your active note. The tab shows a link icon to let you know it's linked to a note.
@@ -55,7 +55,7 @@ Instead of showing the backlinks in a separate tab, you can show the backlinks a
 
 To show backlinks in a note:
 
-1. Open the [[Command palette]].
+1. Open the [[Палитра команд]].
 2. Select **Backlinks: Toggle backlinks in document**.
 
 Or, enable **Backlink in document** under the Backlinks plugin options to automatically toggle backlinks when you open a new note.
