--- a/Плагины/Предпросмотр страницы.md
+++ b/Плагины/Предпросмотр страницы.md
@@ -1,6 +1,6 @@
 Page preview lets you preview a page when you hover the cursor over an internal link, without needing to navigate to that page.
 
-In addition to editor, you can preview notes in several other parts of Obsidian, such as [[File explorer]], [[Search]], and [[Backlinks]].
+In addition to editor, you can preview notes in several other parts of Obsidian, such as [[Файловый менеджер]], [[Поиск]], and [[Обратные ссылки]].
 
 To preview a page while in Editing view, press `Ctrl` (or `Cmd` on macOS) while hovering the cursor over the link.
 
