Accepted file formats
Accepted file formats

--- a/Плагины/Файловый менеджер.md
+++ b/Плагины/Файловый менеджер.md
@@ -1,4 +1,4 @@
-The File explorer lets you manage files and folders inside your vault. You can browse notes and other [[Accepted file formats]] in your vault and perform many common file operations:
+The File explorer lets you manage files and folders inside your vault. You can browse notes and other [[Поддерживаемые форматы файлов]] in your vault and perform many common file operations:
 
 - Create, delete, and rename files and folders.
 - Move files and folders with drag and drop.
